--- a/index.html
+++ b/index.html
@@ -1,93 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML Intro</title>
-  </head>
-  <body>
-    <div id="exercise1">
-      <!-- Complete Exercise 1 HERE -->
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HTML Intro</title>
+</head>
+<body>
+  <div id="exercise1">
+    <h1>Hafiz Hamdard</h1>
+    <p>I'm a funny person, I enjoy making others happy. I'm also one of the best students at TrueCoders boot camp. My dream is to work at Google, Facebook, or Netflix as a software engineer.</p>
+    <p>Why do programmers prefer dark mode? Because light attracts bugs!</p>
+  </div>
 
-    <div id="exercise2">
-      <!-- Complete Exercise 2 HERE -->
-    </div>
+  <div id="exercise2">
+    <h3>List of my <em>dreams</em></h3>
+    <ul>
+      <li>Software engineer <a href="https://www.google.com/">GOOGLE</a></li>
+      <li>Software developer <a href="https://www.facebook.com/">Facebook</a></li>
+      <li>Owner of a company like Google <a href="https://www.netflix.com/">Netflix</a></li>
+    </ul>
+  </div>
 
-    <div id="exercise3">
-      <!-- Complete Exercise 3 HERE -->
-    </div>
+  <div id="exercise3">
+    <img src="Dream.jpg" alt="Dream photo" />   
+    <img src="dream qutes.jpg" width="300" height="320" alt="Dream Quotes" />
+  </div>
 
-    <div id="exercise4">
-      <!-- Complete Exercise 4 HERE -->
-      <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
-        his hands and shrugged, his face breaking into a beautific smile. "Why
-        would I want to win anything other than a beautiful game?"
-      </p>
-    </div>
+  <div id="exercise4">
+    <p>I looked down at the board. "The <strong> point</strong>  isn't to win?" I asked.
+       "The <strong>point</strong>," <cite>Bredon</cite> said grandly, "is to <u>play</u> a <em>beautiful</em> game." He lifted his hands and shrugged, his face breaking into a beautific smile. "Why would I want to win anything other than a beautiful game?"</p>
+  </div>
 
-    <div id="exercise5">
-      <!-- Complete Exercise 5 HERE -->
-      <div>
-        <div>
-          <div>
-            <span>
-              <a href="/">Home</a>
-            </span>
-            <span>
-              <a href="/about">About</a>
-            </span>
-            <span>
-              <a href="/projects">Projects</a>
-            </span>
-          </div>
-        </div>
-      </div>
+  <div id="exercise5">
+    <main>
+      <section>
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/projects">Projects</a></li>
+          </ul>
+        </nav>
+      </section>
 
-      <div>
-        <div>
+      <section>
+        <header>
           <h1>Main Heading</h1>
-          <p>Author.. Bio...</p>
-        </div>
-        <div>
-          <div>
-            <h2>Sub Heading</h2>
-            <div>
-              <p>Lorem ipsum...</p>
-            </div>
-          </div>
-          <div>
-            <h2>Sub Heading</h2>
+          <p>Author Bio...</p>
+        </header>
+        <article>
+          <section>
+            <header>
+              <h2>Sub Heading</h2>
+            </header>
             <p>Lorem ipsum...</p>
-            <div>
-              <h3>Another Sub Heading</h3>
+          </section>
+          <section>
+            <header>
+              <h2>Sub Heading</h2>
+            </header>
+            <p>Lorem ipsum...</p>
+            <section>
+              <header>
+                <h3>Another Sub Heading</h3>
+              </header>
               <p>Lorem ipsum...</p>
-            </div>
-          </div>
-        </div>
-	</div>
+            </section>
+          </section>
+        </article>
+      </section>
 
-      <div>
-        <div>
-          <div>
-            <span>
-              <a href="/privacy">Privacy Policy</a>
-            </span>
-            <span>
-              <a href="/terms">Terms and Conditions</a>
-            </span>
-          </div>
-        </div>
-
-        <div>
+      <section>
+        <nav>
+          <ul>
+            <li><a href="/privacy">Privacy Policy</a></li> 
+            <li><a href="/terms">Terms and Conditions</a></li> 
+          </ul>
+        </nav>
+        <footer>
           <p>Powered by 🕯️</p>
           <p>&copy; TrueCoders 2021-24</p>
-        </div>
-      </div>
-    </div>
-	
-  </body>
+        </footer>
+      </section>
+    </main>
+  </div>
+</body>
 </html>
